--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.6.0",
+    "elevenlabs": "^0.16.0",
     "next": "14.2.11",
     "react": "^18",
     "react-dom": "^18"
