--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
   },
   "dependencies": {
     "@deepgram/sdk": "^3.6.0",
+    "ai": "^3.3.37",
     "elevenlabs": "^0.16.0",
     "next": "14.2.11",
+    "openai": "^4.61.0",
     "react": "^18",
     "react-dom": "^18"
   },
